# ifs-ai-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
db/: __init__.py  engine.py
models/: __init__.py  base.py  interaction.py  message.py
provider/: __init__.py  g4f.py
routers/: __init__.py  interactions.py  interactions_test.py
